--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,33 @@
-body {background-color:darkcyan;}
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #78baed;
+    color: #000000;
+}
+
+header {
+    padding: 1em 0;
+    text-align: center;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 2em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
 a{text-decoration: none;}
 
-
-
-
+footer {
+    text-align: center;
+    padding: 1em 0;
+    background-color: #333;
+    color: white;
+}
