--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,8 @@ header h1 {
     font-size: 2em;
 }
 
-nav ul {
+nav {
+    background-color: #000000;
     list-style-type: none;
     padding: 0;
     margin: 0;
