--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header h1 {
 }
 
 nav {
-    background-color: #000000;
+    color: #000000;
     list-style-type: none;
     padding: 2em;
     margin: 0;
