--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,8 @@ nav {
     text-align: center;
 }
 
-a{text-decoration: none;}
+a{text-decoration: none;
+color: #000000;}
 
 footer {
     text-align: center;
