--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #24699d;
-    color: #000000;
+    color: #ffffff;
 }
 
 header {
@@ -26,7 +26,7 @@ nav {
 
 a{text-decoration: none;
     margin: 10px;
-color: #000000;}
+color: #ffffff;}
 
 footer {
     text-align: center;
